# l4ka-pistachio

./: Info.plist
kernel/: .gitignore  Makefile.am  configure.ac  genasmsyms.sh  genkernellds.sh  gentcblayout.sh  genversion.sh  stub.c
kernel/config/: GENERIC
kernel/include/: .gitignore
kernel/kdb/: Makefile.am
kernel/kdb/api/: Makefile.am
kernel/kdb/api/v4/: Makefile.am
kernel/kdb/arch/x86/: Makefile.am
kernel/kdb/arch/x86/x32/: Makefile.am
kernel/kdb/generic/: Makefile.am
kernel/kdb/glue/: Makefile.am
kernel/kdb/glue/v4-x86/: Makefile.am
kernel/kdb/glue/v4-x86/x32/: Makefile.am
kernel/kdb/platform/: Makefile.am
kernel/kdb/platform/pc99/: Makefile.am
kernel/src/: Makefile.am
kernel/src/api/: Makefile.am
kernel/src/api/v4/: Makefile.am
kernel/src/arch/: Makefile.am
kernel/src/arch/x86/: Makefile.am
kernel/src/arch/x86/x32/: Makefile.am
kernel/src/generic/: Makefile.am
kernel/src/glue/v4-x86/: Makefile.am
kernel/src/glue/v4-x86/x32/: Makefile.am
kernel/src/platform/: Makefile.am
kernel/src/platform/pc99/: Makefile.am
